# src/controllers/personnel.controller.js
@@ -7,6 +7,19 @@ const Personnel = require("../models/personnel.model");
 
 module.exports = {
   list: async (req, res) => {
+    /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "List Personnels"
+            #swagger.description = `
+                You can send query with endpoint for search[], sort[], page and limit.
+                <ul> Examples:
+                    <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                    <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                    <li>URL/?<b>page=2&limit=1</b></li>
+                </ul>
+            `
+        */
+
     const data = await res.getModelList(Personnel, {}, "departmentId");
 
     res.status(200).send({
@@ -17,6 +30,19 @@ module.exports = {
   },
 
   create: async (req, res) => {
+    /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Create Personnel"
+            #swagger.description = "Look to <b>'Models/Personnel'</b> for parameters."
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: 'true',
+                schema: {
+                    $ref: '#/definitions/Personnel'
+                }
+            }
+        */
+
     // isLead Control:
     const isLead = req.body?.isLead || false;
     if (isLead) {
@@ -35,6 +61,11 @@ module.exports = {
   },
 
   read: async (req, res) => {
+    /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Get Single Personnel"
+    */
+
     const data = await Personnel.findOne({ _id: req.params.id });
 
     res.status(200).send({
@@ -44,6 +75,19 @@ module.exports = {
   },
 
   update: async (req, res) => {
+    /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Update Personnel"
+            #swagger.description = "Look to <b>'Models/Personnel'</b> for parameters."
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: 'true',
+                schema: {
+                    $ref: '#/definitions/Personnel'
+                }
+            }
+    */
+
     // isLead Control:
     const isLead = req.body?.isLead || false;
     if (isLead) {
@@ -67,6 +111,11 @@ module.exports = {
   },
 
   delete: async (req, res) => {
+    /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Delete Personnel"
+    */
+
     const data = await Personnel.deleteOne({ _id: req.params.id });
 
     res.status(data.deletedCount ? 204 : 404).send({
