# swagger.json
@@ -290,7 +290,11 @@
     },
     "/personnels/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "List Personnels",
+        "description": "  You can send query with endpoint for search[], sort[], page and limit.  <ul> Examples:   <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>   <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>   <li>URL/?<b>page=2&limit=1</b></li>  </ul>  ",
         "responses": {
           "200": {
             "description": "OK"
@@ -298,18 +302,18 @@
         }
       },
       "post": {
-        "description": "",
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "Create Personnel",
+        "description": "Look to <b>'Models/Personnel'</b> for parameters.",
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "departmentId": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Personnel"
             }
           }
         ],
@@ -322,6 +326,10 @@
     },
     "/personnels/{id}": {
       "get": {
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "Get Single Personnel",
         "description": "",
         "parameters": [
           {
@@ -338,13 +346,25 @@
         }
       },
       "put": {
-        "description": "",
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "Update Personnel",
+        "description": "Look to <b>'Models/Personnel'</b> for parameters.",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Personnel"
+            }
           }
         ],
         "responses": {
@@ -354,6 +374,10 @@
         }
       },
       "delete": {
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "Delete Personnel",
         "description": "",
         "parameters": [
           {
@@ -373,13 +397,25 @@
         }
       },
       "patch": {
-        "description": "",
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "Update Personnel",
+        "description": "Look to <b>'Models/Personnel'</b> for parameters.",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Personnel"
+            }
           }
         ],
         "responses": {
@@ -505,6 +541,14 @@
             "unique": {
               "type": "boolean",
               "example": true
+            },
+            "dataType": {
+              "type": "string",
+              "example": "string"
+            },
+            "exampleUsing": {
+              "type": "string",
+              "example": "username: test"
             }
           }
         },
@@ -683,7 +727,7 @@
             },
             "default": {
               "type": "number",
-              "example": 1697734284760
+              "example": 1697737372540
             }
           }
         }
